[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
arc-swap = "1"
bytes = "1"
core_affinity = "0.8"
futures-util = "0.3"
h2 = "0.3"
hashbrown = "0.14"
http = "0.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
